--- a/results/loading_idol_cute.html
+++ b/results/loading_idol_cute.html
@@ -80,7 +80,7 @@
             }
         })
     </script>
-    <script src="../js/common.js%3Fv%3D20211006131600"></script>
+    <script src="../js/common.js"></script>
     <script src="../js/common_new.js"></script>
     <script>
         $(function() {
@@ -191,12 +191,12 @@
                             <input type="submit" value="" class="submit_reset_style">
                         </label>
                     </form>
-                    <form method="get" action='loading_idol_cute.html' style="margin:0">
+                    <div class="tab_attr_cute _selected"></div>
+                    <form method="get" action='loading_idol_cool.html' style="margin:0">
                         <label class="tab_attr_cute label_reset_style" onClick="">
                             <input type="submit" value="" class="submit_reset_style">
                         </label>
                     </form>
-                    <div class="tab_attr_cool _selected"></div>
                     <form method="get" action='loading_idol_passion.html' style="margin:0">
                         <label class="tab_attr_passion label_reset_style" onClick="">
                             <input type="submit" value="" class="submit_reset_style">
@@ -211,39 +211,19 @@
                 <div class="displayBox">
                     <div style="width:100px; height:160px; position: relative; margin:0 3px 8px 3px;" class="chk_area se_008">
                         <div class="opa" style="padding:12px 0px 0px;">
-                            <img src="../image_sp/ui/rich/quest/loading/100304.gif" width="102" height="102">
+                            <img src="../image_sp/ui/rich/quest/loading/100387.gif" width="102" height="102">
                         </div>
                         <img src="../image_sp/ui/rich/bg/check_off.png" style="width:100px; height:160px;position: absolute; top:0px; left:0px; z-index:-1;" class="check_off">
                     </div>
                     <div style="width:100px; height:160px; position: relative; margin:0 3px 8px 3px;" class="chk_area se_008">
                         <div class="opa" style="padding:12px 0px 0px;">
-                            <img src="../image_sp/ui/rich/quest/loading/100441.gif" width="102" height="102">
+                            <img src="../image_sp/ui/rich/quest/loading/100583.gif" width="102" height="102">
                         </div>
                         <img src="../image_sp/ui/rich/bg/check_off.png" style="width:100px; height:160px;position: absolute; top:0px; left:0px; z-index:-1;" class="check_off">
                     </div>
                     <div style="width:100px; height:160px; position: relative; margin:0 3px 8px 3px;" class="chk_area se_008">
                         <div class="opa" style="padding:12px 0px 0px;">
-                            <img src="../image_sp/ui/rich/quest/loading/100584.gif" width="102" height="102">
-                        </div>
-                        <img src="../image_sp/ui/rich/bg/check_off.png" style="width:100px; height:160px;position: absolute; top:0px; left:0px; z-index:-1;" class="check_off">
-                    </div>
-                </div>
-                <div class="displayBox">
-                    <div style="width:100px; height:160px; position: relative; margin:0 3px 8px 3px;" class="chk_area se_008">
-                        <div class="opa" style="padding:12px 0px 0px;">
-                            <img src="../image_sp/ui/rich/quest/loading/100912.gif" width="102" height="102">
-                        </div>
-                        <img src="../image_sp/ui/rich/bg/check_off.png" style="width:100px; height:160px;position: absolute; top:0px; left:0px; z-index:-1;" class="check_off">
-                    </div>
-                    <div style="width:100px; height:160px; position: relative; margin:0 3px 8px 3px;" class="chk_area se_008">
-                        <div class="opa" style="padding:12px 0px 0px;">
-                            <img src="../image_sp/ui/rich/quest/loading/101007.gif" width="102" height="102">
-                        </div>
-                        <img src="../image_sp/ui/rich/bg/check_off.png" style="width:100px; height:160px;position: absolute; top:0px; left:0px; z-index:-1;" class="check_off">
-                    </div>
-                    <div style="width:100px; height:160px; position: relative; margin:0 3px 8px 3px;" class="chk_area se_008">
-                        <div class="opa" style="padding:12px 0px 0px;">
-                            <img src="../image_sp/ui/rich/quest/loading/101199.gif" width="102" height="102">
+                            <img src="../image_sp/ui/rich/quest/loading/100780.gif" width="102" height="102">
                         </div>
                         <img src="../image_sp/ui/rich/bg/check_off.png" style="width:100px; height:160px;position: absolute; top:0px; left:0px; z-index:-1;" class="check_off">
                     </div>
@@ -251,19 +231,33 @@
                 <div class="displayBox">
                     <div style="width:100px; height:160px; position: relative; margin:0 3px 8px 3px;" class="chk_area se_008">
                         <div class="opa" style="padding:12px 0px 0px;">
-                            <img src="../image_sp/ui/rich/quest/loading/101325.gif" width="102" height="102">
+                            <img src="../image_sp/ui/rich/quest/loading/100991.gif" width="102" height="102">
                         </div>
                         <img src="../image_sp/ui/rich/bg/check_off.png" style="width:100px; height:160px;position: absolute; top:0px; left:0px; z-index:-1;" class="check_off">
                     </div>
                     <div style="width:100px; height:160px; position: relative; margin:0 3px 8px 3px;" class="chk_area se_008">
                         <div class="opa" style="padding:12px 0px 0px;">
-                            <img src="../image_sp/ui/rich/quest/loading/101480.gif" width="102" height="102">
+                            <img src="../image_sp/ui/rich/quest/loading/101245.gif" width="102" height="102">
                         </div>
                         <img src="../image_sp/ui/rich/bg/check_off.png" style="width:100px; height:160px;position: absolute; top:0px; left:0px; z-index:-1;" class="check_off">
                     </div>
                     <div style="width:100px; height:160px; position: relative; margin:0 3px 8px 3px;" class="chk_area se_008">
                         <div class="opa" style="padding:12px 0px 0px;">
-                            <img src="../image_sp/ui/rich/quest/loading/101608.gif" width="102" height="102">
+                            <img src="../image_sp/ui/rich/quest/loading/101341.gif" width="102" height="102">
+                        </div>
+                        <img src="../image_sp/ui/rich/bg/check_off.png" style="width:100px; height:160px;position: absolute; top:0px; left:0px; z-index:-1;" class="check_off">
+                    </div>
+                </div>
+                <div class="displayBox">
+                    <div style="width:100px; height:160px; position: relative; margin:0 3px 8px 3px;" class="chk_area se_008">
+                        <div class="opa" style="padding:12px 0px 0px;">
+                            <img src="../image_sp/ui/rich/quest/loading/101475.gif" width="102" height="102">
+                        </div>
+                        <img src="../image_sp/ui/rich/bg/check_off.png" style="width:100px; height:160px;position: absolute; top:0px; left:0px; z-index:-1;" class="check_off">
+                    </div>
+                    <div style="width:100px; height:160px; position: relative; margin:0 3px 8px 3px;" class="chk_area se_008">
+                        <div class="opa" style="padding:12px 0px 0px;">
+                            <img src="../image_sp/ui/rich/quest/loading/101609.gif" width="102" height="102">
                         </div>
                         <img src="../image_sp/ui/rich/bg/check_off.png" style="width:100px; height:160px;position: absolute; top:0px; left:0px; z-index:-1;" class="check_off">
                     </div>
