--- a/results/loading_idol_cute.html
+++ b/results/loading_idol_cute.html
@@ -193,7 +193,7 @@
                     </form>
                     <div class="tab_attr_cute _selected"></div>
                     <form method="get" action='loading_idol_cool.html' style="margin:0">
-                        <label class="tab_attr_cute label_reset_style" onClick="">
+                        <label class="tab_attr_cool label_reset_style" onClick="">
                             <input type="submit" value="" class="submit_reset_style">
                         </label>
                     </form>
