--- a/results.html
+++ b/results.html
@@ -113,6 +113,7 @@
         </header>
         <div class="m-Btm5"><img src="image_sp/ui/trophy/title_charge_102018.jpg" width="100%"></div>
         <div class="m-Btm5"><img src="image_sp/ui/trophy/title_charge_101559.jpg" width="100%"></div>
+        <div class="m-Btm5"><img src="image_sp/ui/trophy/title_charge_102168.jpg" width="100%"></div>
         <div class="area-btn-common _base-width m-Btm8 m-Top8">
             <a href="../light-filled-furisode/main.html" class="btn_normal_line_4 _line_2" style="font-size:11px">思い出<br>エピソード</a>
             <a href="results/title_cool.html" class="btn_normal_line_4">肩書</a>
