--- a/results.html
+++ b/results.html
@@ -120,7 +120,7 @@
             <a href="results/loading_idol_cool.html" class="btn_normal_line_4 _free_line">
                 <div class="text-elem" style="font-size:10px">ローディングキャラ</div>
             </a>
-            <a href="https://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/results/game_center_title" class="btn_normal_line_4">称号</a></div>
+            <a href="results/game_center_titles.html" class="btn_normal_line_4">称号</a></div>
             <img src="image_sp/ui/line_hoshi.jpg" width="320" height="11" class="m-Btm8">
         <section>
             <table style="width:320px">
