--- a/refresh_room/index.html
+++ b/refresh_room/index.html
@@ -173,6 +173,14 @@
                 <img src='../image_sp/ui/refresh_room/banner/57.png' class="refresh_link_img">
                 <div class="refresh_link_value">ドレスコードは超☆水着</div>
             </a>
+            <a class="refresh_link jsOnDesignBtn" href='detail/127/index.html'>
+                <img src='../image_sp/ui/refresh_room/banner/127.png' class="refresh_link_img">
+                <div class="refresh_link_value">クリスマス当日！<br>プレゼントは何だろな～♪</div>
+            </a>
+            <a class="refresh_link jsOnDesignBtn" href='detail/21/index.html'>
+                <img src='../image_sp/ui/refresh_room/banner/21.png' class="refresh_link_img">
+                <div class="refresh_link_value">豆まきパーティーへ<br>ようこそ！</div>
+            </a>
             <a class="refresh_link jsOnDesignBtn" href='detail/151/index.html'>
                 <img src='../image_sp/ui/refresh_room/banner/151.png' class="refresh_link_img">
                 <div class="refresh_link_value">あの日の絵画を探して♪</div>
