--- a/last_cinderella_story/4.html
+++ b/last_cinderella_story/4.html
@@ -74,8 +74,8 @@
               , chrome_app_flg = 0
               , chrome_app_extension_id = 'dnacabmnfmejgfffmcehejcmiciinpej';
         </script>
-        <script type='text/javascript' src='../js/app_sound.js%3Fv%3D20210904134916'></script>
-        <link rel="stylesheet" type="text/css" href="https://sp.pf-img-a.mbga.jp/css/base.css?20171116"/>
+        <script type='text/javascript' src='../js/app_sound.js'></script>
+        <link rel="stylesheet" type="text/css" href="../css/base.css"/>
     </head>
     <body style="margin:0px;">
         <div id="animation_container" style="background-color:rgba(0, 0, 0, 0); width:100%; height: 1500px position: relative">
