--- a/last_cinderella_story/3.html
+++ b/last_cinderella_story/3.html
@@ -9,9 +9,8 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <script type="text/javascript" nonce="XOJ0BVE+zr3qdJZKBBAaLFbFzesxhK/xP1QmLnOdycs=" src="//lc.getunicorn.org?type=base-script&amp;request-id=11080"></script>
-        <link rel="stylesheet" href='https://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http%3A%2F%2Fmobamas.net%2Fidolmaster%2Fcss%2Fgame%2Fpex.css%3Fv%3D20210909201058' media="all">
-        <script src='https://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http%3A%2F%2Fmobamas.net%2Fidolmaster%2Fjs%2Fjquery-1.9.1.min.js%3Fversion%3D1_9_1%26v%3D20210904134922'></script>
+        <link rel="stylesheet" href='../css/game/pex.css' media="all">
+        <script src='../js/jquery-1.9.1.min.js'></script>
         <script>
             $(document).ready(function() {
                 if (typeof newrelic === 'object' && typeof newrelic.setPageViewName === 'function') {
@@ -59,25 +58,25 @@
                 width: 40px;
             }
         </style>
-        <script type='text/javascript' src='https://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http%3A%2F%2Fmobamas.net%2Fidolmaster%2Fjs%2Fcreatejs.min.js%3Fv%3D20210904134921'></script>
-        <script type='text/javascript' src='https://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http%3A%2F%2Fmobamas.net%2Fidolmaster%2Fjs%2Fapp_sound.js%3Fv%3D20210904134916'></script>
-        <script type='text/javascript' src='https://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http%3A%2F%2Fmobamas.net%2Fidolmaster%2Fjs%2Fcjs%2Fstory_generator%2Fstory_generator_n40.js%3Fv%3D20230120144254' crossorigin="anonymous"></script>
-        <script type='text/javascript' src='https://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http%3A%2F%2Fmobamas.net%2Fidolmaster%2Fjs%2Fcjs%2Fstory_generator%2Feffects%2Feff_question.js%3Fv%3D20210904134921' crossorigin="anonymous"></script>
-        <script type='text/javascript' src='https://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http%3A%2F%2Fmobamas.net%2Fidolmaster%2Fjs%2Fcjs%2Fstory_generator%2Feffects%2Feff_laugh.js%3Fv%3D20210904134921' crossorigin="anonymous"></script>
-        <script type='text/javascript' src='https://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http%3A%2F%2Fmobamas.net%2Fidolmaster%2Fjs%2Fcjs%2Fstory_generator%2Feffects%2Feff_notice.js%3Fv%3D20210904134921' crossorigin="anonymous"></script>
-        <script type='text/javascript' src='https://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http%3A%2F%2Fmobamas.net%2Fidolmaster%2Fjs%2Fcjs%2Fstory_generator%2Feffects%2Feff_chord.js%3Fv%3D20210904134921' crossorigin="anonymous"></script>
-        <script type='text/javascript' src='https://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http%3A%2F%2Fmobamas.net%2Fidolmaster%2Fjs%2Fcjs%2Fstory_generator%2Feffects%2Feff_shock2.js%3Fv%3D20210904134921' crossorigin="anonymous"></script>
-        <script type='text/javascript' src='https://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http%3A%2F%2Fmobamas.net%2Fidolmaster%2Fjs%2Fcjs%2Fstory_generator%2Feffects%2Feff_concent.js%3Fv%3D20210904134921' crossorigin="anonymous"></script>
-        <script type='text/javascript' src='https://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http%3A%2F%2Fmobamas.net%2Fidolmaster%2Fjs%2Fcjs%2Fstory_generator%2Feffects%2Feff_shock.js%3Fv%3D20210904134921' crossorigin="anonymous"></script>
-        <script type='text/javascript' src='https://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http%3A%2F%2Fmobamas.net%2Fidolmaster%2Fjs%2Fcjs%2Fstory_generator%2Feffects%2Feff_question.js%3Fv%3D20210904134921' crossorigin="anonymous"></script>
+        <script type='text/javascript' src='../js/createjs.min.js'></script>
+        <script type='text/javascript' src='../js/app_sound.js'></script>
+        <script type='text/javascript' src='../js/cjs/story_generator/story_generator_n40.js' crossorigin="anonymous"></script>
+        <script type='text/javascript' src='../js/cjs/story_generator/effects/eff_question.js' crossorigin="anonymous"></script>
+        <script type='text/javascript' src='../js/cjs/story_generator/effects/eff_laugh.js' crossorigin="anonymous"></script>
+        <script type='text/javascript' src='../js/cjs/story_generator/effects/eff_notice.js' crossorigin="anonymous"></script>
+        <script type='text/javascript' src='../js/cjs/story_generator/effects/eff_chord.js' crossorigin="anonymous"></script>
+        <script type='text/javascript' src='../js/cjs/story_generator/effects/eff_shock2.js' crossorigin="anonymous"></script>
+        <script type='text/javascript' src='../js/cjs/story_generator/effects/eff_concent.js' crossorigin="anonymous"></script>
+        <script type='text/javascript' src='../js/cjs/story_generator/effects/eff_shock.js' crossorigin="anonymous"></script>
+        <script type='text/javascript' src='../js/cjs/story_generator/effects/eff_question.js' crossorigin="anonymous"></script>
         <script type='text/javascript'>
             var se_flg = 0
               , bgm_flg = 0
               , chrome_app_flg = 0
               , chrome_app_extension_id = 'dnacabmnfmejgfffmcehejcmiciinpej';
         </script>
-        <script type='text/javascript' src='https://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http%3A%2F%2Fmobamas.net%2Fidolmaster%2Fjs%2Fapp_sound.js%3Fv%3D20210904134916'></script>
-        <link rel="stylesheet" type="text/css" href="https://sp.pf-img-a.mbga.jp/css/base.css?20171116"/>
+        <script type='text/javascript' src='../js/app_sound.js'></script>
+        <link rel="stylesheet" type="text/css" href="../css/base.css"/>
     </head>
     <body style="margin:0px;">
         <div id="animation_container" style="background-color:rgba(0, 0, 0, 0); width:100%; height: 1500px position: relative">
@@ -9553,7 +9552,7 @@
             };
             window.im_cjs.title_name = '第3話' || 'no_title';
             window.im_cjs.event_type = '3' || 0;
-            window.im_cjs.jump_url = 'https://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http%3A%2F%2Fmobamas.net%2Fidolmaster%2Flast_cinderella_story%2Findex%3Fl_frm%3DLast_cinderella_story_read_1%26rnd%3D341316451';
+            window.im_cjs.jump_url = 'https://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/last_cinderella_story/index%3Fl_frm%3DLast_cinderella_story_read_1%26rnd%3D341316451';
             // createjsの演出が全て終了した場合の飛び先urlの定義
             window.im_cjs.chara_num = 40;
             window.im_cjs.voice_flag = 0;
