--- a/birthday/main.html
+++ b/birthday/main.html
@@ -236,6 +236,19 @@
                     </div>
                 </a>
             </div>
+            <div class="area_birthday jsOnBanner">
+                <a href='kiyomi2022.html' class="banner_birthday_renewal area_banner_wrap">
+                    <div class="text_area">10월27일</div>
+                    <div class="idol_lbirthday">
+                        <ul>
+                            <li><img src='../image_sp/card/xs/fumika_41.jpg' width="30"></li>
+                        </ul>
+                    </div>
+                    <div class="idol_lbirthday_text count_1">
+                        <div>후미카</div>
+                    </div>
+                </a>
+            </div>
         </section>
         <script src="../js/min/mypage.min.js"></script>
         <script src="../js/islider.js"></script>
