--- a/birthday/main.html
+++ b/birthday/main.html
@@ -237,7 +237,7 @@
                 </a>
             </div>
             <div class="area_birthday jsOnBanner">
-                <a href='kiyomi2022.html' class="banner_birthday_renewal area_banner_wrap">
+                <a href='fumika2022.html' class="banner_birthday_renewal area_banner_wrap">
                     <div class="text_area">10월27일</div>
                     <div class="idol_lbirthday">
                         <ul>
