--- a/idol_gallery/idol_detail/momoka.html
+++ b/idol_gallery/idol_detail/momoka.html
@@ -4078,7 +4078,7 @@ kg
                         "comments_my_2": "お気に入りの水着ですのよ♪",
                         "comments_my_3": "冷たくて…気持ちがいいですわ",
                         "comments_my_4": "噴水の縁に腰を掛けるなんて…生まれて初めての体験でしてよ",
-                        "comments_my_max": "わさび茶づけちゃまにも､水飛沫で涼のお裾分けを…えいっ♪",
+                        "comments_my_max": "OOちゃまにも､水飛沫で涼のお裾分けを…えいっ♪",
                         "comments_work_1": "あなたと､優雅なひと時を…♪",
                         "comments_work_2": "お休みが､ここでのお仕事です",
                         "comments_work_3": "降りる時は､手をお借りしても?",
@@ -4086,7 +4086,7 @@ kg
                         "comments_work_max": "たとえ女神になろうと…櫻井桃華は､あなたのｱｲﾄﾞﾙですわ",
                         "comments_work_love_up": "女神もｱｲﾄﾞﾙも､休息は必要ですわ｡ﾌﾟﾛﾃﾞｭｰｻｰちゃまにも…ね♪",
                         "comments_live": "緊張していますの? ふふ♪",
-                        "comments_love_max": "神殿からひと度出れば､わたくしはただの桃華｡わさび茶づけちゃまは…それでも愛してくださると…確信しておりますの♪"
+                        "comments_love_max": "神殿からひと度出れば､わたくしはただの桃華｡OOちゃまは…それでも愛してくださると…確信しておりますの♪"
                     },
                     "voice": {
                         "comment": "../../sound/1571302/idolcomment.mp3",
